tests/dataset/tpc-ds/compiler/kotlin/q77.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q77.kt:288:19: error: unresolved reference: concat
val per_channel = concat(run {
                  ^
